// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu component renders with props 1`] = `
<ul
  className="Menu"
>
  <li>
    <button
      className="Menu__link"
      onClick={[Function]}
    >
      Current Job
    </button>
  </li>
  <li>
    <button
      className="Menu__link"
      onClick={[Function]}
    >
      Expertise
    </button>
  </li>
  <li>
    <button
      className="Menu__link"
      onClick={[Function]}
    >
      Career
    </button>
  </li>
</ul>
`;

exports[`Menu component renders without crashing 1`] = `
<ul
  className="Menu"
>
  <li>
    <button
      className="Menu__link"
    >
      Current Job
    </button>
  </li>
  <li>
    <button
      className="Menu__link"
    >
      Expertise
    </button>
  </li>
  <li>
    <button
      className="Menu__link"
    >
      Career
    </button>
  </li>
</ul>
`;
